Assignment 1/Code/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'['", "']'", "'('", "')'", "'{'", "'}'", 
                     "'.'", "','", "';'", "':'", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'::'", "'integer'", 
                     "'float'", "'boolean'", "'string'", "'array'", "'of'", 
                     "'void'", "'auto'", "'inhirit'", "'out'", "'function'", 
                     "'if'", "'else'", "'for'", "'while'", "'do'", "'break'", 
                     "'continue'", "'return'", "'readInteger'", "'printInteger'", 
                     "'readFloat'", "'writeFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'" ]

    symbolicNames = [ "<INVALID>", "INTLIT", "FLOATLIT", "BOOL", "STRINGLIT", 
                      "LSB", "RSB", "LRB", "RRB", "LCB", "RCB", "DOT", "COMMA", 
                      "SEMI", "COLON", "ASSIGN", "ADDOP", "MINUSOP", "MULOP", 
                      "DIVOP", "MODOP", "NEGAOP", "CONJOP", "DISJOP", "EQUALOP", 
                      "DIFOP", "LESSOP", "LESSEQOP", "GREATOP", "GREATEQOP", 
                      "CONCAT", "INTEGER", "FLOAT", "BOOLEAN", "STRING", 
                      "ARRAY", "OF", "VOID", "AUTO", "INHIRIT", "OUT", "FUNCTION", 
                      "IF", "ELSE", "FOR", "WHILE", "DO", "BREAK", "CONT", 
                      "RT", "READINT", "PRINTINT", "READFLOAT", "WRITEFLOAT", 
                      "READBOOL", "PRINTBOOL", "READSTR", "PRINTSTR", "SUPERS", 
                      "PREVENTDEF", "ID", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_var_type = 1
    RULE_vardecl = 2
    RULE_vardecl1 = 3
    RULE_id_list1 = 4
    RULE_id_list2 = 5
    RULE_vardecl2 = 6
    RULE_vardecl2_2 = 7
    RULE_vardecl3 = 8
    RULE_vardecl3_2 = 9
    RULE_funcdecl = 10
    RULE_paradecl = 11
    RULE_para_list1 = 12
    RULE_para_list2 = 13
    RULE_para = 14
    RULE_stmts_list = 15
    RULE_stmts = 16
    RULE_assign_stmt = 17
    RULE_assign_lhs = 18
    RULE_if_stmt = 19
    RULE_for_stmt = 20
    RULE_while_stmt = 21
    RULE_do_stmt = 22
    RULE_break_stmt = 23
    RULE_continue_stmt = 24
    RULE_return_stmt = 25
    RULE_call_stmt = 26
    RULE_call_stmt_no_semi = 27
    RULE_call_body = 28
    RULE_call_list1 = 29
    RULE_call_list2 = 30
    RULE_block_stmt = 31
    RULE_block_body = 32
    RULE_exp_ind = 33
    RULE_exp = 34
    RULE_exp1 = 35
    RULE_exp2 = 36
    RULE_exp3 = 37
    RULE_exp4 = 38
    RULE_exp5 = 39
    RULE_exp6 = 40
    RULE_exp7 = 41
    RULE_operands = 42
    RULE_array_type = 43
    RULE_int_list1 = 44
    RULE_int_list2 = 45
    RULE_literals = 46
    RULE_array_lit = 47
    RULE_expression_list1 = 48
    RULE_expression_list2 = 49
    RULE_expression = 50
    RULE_functions = 51
    RULE_readint_func = 52
    RULE_readfloat_func = 53
    RULE_readbool_func = 54
    RULE_readstr_func = 55
    RULE_printint_func = 56
    RULE_printfloat_func = 57
    RULE_printbool_func = 58
    RULE_printstr_func = 59
    RULE_supers = 60
    RULE_preventdef = 61

    ruleNames =  [ "program", "var_type", "vardecl", "vardecl1", "id_list1", 
                   "id_list2", "vardecl2", "vardecl2_2", "vardecl3", "vardecl3_2", 
                   "funcdecl", "paradecl", "para_list1", "para_list2", "para", 
                   "stmts_list", "stmts", "assign_stmt", "assign_lhs", "if_stmt", 
                   "for_stmt", "while_stmt", "do_stmt", "break_stmt", "continue_stmt", 
                   "return_stmt", "call_stmt", "call_stmt_no_semi", "call_body", 
                   "call_list1", "call_list2", "block_stmt", "block_body", 
                   "exp_ind", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "exp7", "operands", "array_type", "int_list1", 
                   "int_list2", "literals", "array_lit", "expression_list1", 
                   "expression_list2", "expression", "functions", "readint_func", 
                   "readfloat_func", "readbool_func", "readstr_func", "printint_func", 
                   "printfloat_func", "printbool_func", "printstr_func", 
                   "supers", "preventdef" ]

    EOF = Token.EOF
    INTLIT=1
    FLOATLIT=2
    BOOL=3
    STRINGLIT=4
    LSB=5
    RSB=6
    LRB=7
    RRB=8
    LCB=9
    RCB=10
    DOT=11
    COMMA=12
    SEMI=13
    COLON=14
    ASSIGN=15
    ADDOP=16
    MINUSOP=17
    MULOP=18
    DIVOP=19
    MODOP=20
    NEGAOP=21
    CONJOP=22
    DISJOP=23
    EQUALOP=24
    DIFOP=25
    LESSOP=26
    LESSEQOP=27
    GREATOP=28
    GREATEQOP=29
    CONCAT=30
    INTEGER=31
    FLOAT=32
    BOOLEAN=33
    STRING=34
    ARRAY=35
    OF=36
    VOID=37
    AUTO=38
    INHIRIT=39
    OUT=40
    FUNCTION=41
    IF=42
    ELSE=43
    FOR=44
    WHILE=45
    DO=46
    BREAK=47
    CONT=48
    RT=49
    READINT=50
    PRINTINT=51
    READFLOAT=52
    WRITEFLOAT=53
    READBOOL=54
    PRINTBOOL=55
    READSTR=56
    PRINTSTR=57
    SUPERS=58
    PREVENTDEF=59
    ID=60
    BLOCK_COMMENT=61
    LINE_COMMENT=62
    WS=63
    ERROR_CHAR=64
    UNCLOSE_STRING=65
    ILLEGAL_ESCAPE=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.VardeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.VardeclContext,i)


        def funcdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.FuncdeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.FuncdeclContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 126
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 124
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 125
                    self.funcdecl()
                    pass


                self.state = 128 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.COLON or _la==MT22Parser.ID):
                    break

            self.state = 130
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_type" ):
                return visitor.visitVar_type(self)
            else:
                return visitor.visitChildren(self)




    def var_type(self):

        localctx = MT22Parser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_type)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(MT22Parser.INTEGER)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.match(MT22Parser.BOOLEAN)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 135
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 5)
                self.state = 136
                self.match(MT22Parser.VOID)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 6)
                self.state = 137
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 7)
                self.state = 138
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl1(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl1Context,0)


        def vardecl2(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl2Context,0)


        def vardecl3(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl3Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.vardecl1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.vardecl2()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.vardecl3()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list1(self):
            return self.getTypedRuleContext(MT22Parser.Id_list1Context,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl1" ):
                return visitor.visitVardecl1(self)
            else:
                return visitor.visitChildren(self)




    def vardecl1(self):

        localctx = MT22Parser.Vardecl1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.id_list1()
            self.state = 147
            self.match(MT22Parser.COLON)
            self.state = 148
            self.var_type()
            self.state = 149
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def id_list2(self):
            return self.getTypedRuleContext(MT22Parser.Id_list2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list1" ):
                return visitor.visitId_list1(self)
            else:
                return visitor.visitChildren(self)




    def id_list1(self):

        localctx = MT22Parser.Id_list1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_id_list1)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(MT22Parser.ID)
                self.state = 152
                self.id_list2()
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def id_list2(self):
            return self.getTypedRuleContext(MT22Parser.Id_list2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list2" ):
                return visitor.visitId_list2(self)
            else:
                return visitor.visitChildren(self)




    def id_list2(self):

        localctx = MT22Parser.Id_list2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_list2)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(MT22Parser.COMMA)
                self.state = 157
                self.match(MT22Parser.ID)
                self.state = 158
                self.id_list2()
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def vardecl2_2(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl2_2Context,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl2" ):
                return visitor.visitVardecl2(self)
            else:
                return visitor.visitChildren(self)




    def vardecl2(self):

        localctx = MT22Parser.Vardecl2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardecl2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(MT22Parser.ID)
            self.state = 163
            self.vardecl2_2()
            self.state = 164
            self.exp()
            self.state = 165
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl2_2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def vardecl2_2(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl2_2Context,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl2_2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl2_2" ):
                return visitor.visitVardecl2_2(self)
            else:
                return visitor.visitChildren(self)




    def vardecl2_2(self):

        localctx = MT22Parser.Vardecl2_2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardecl2_2)
        try:
            self.state = 177
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.match(MT22Parser.COMMA)
                self.state = 168
                self.match(MT22Parser.ID)
                self.state = 169
                self.vardecl2_2()
                self.state = 170
                self.exp()
                self.state = 171
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.match(MT22Parser.COLON)
                self.state = 174
                self.var_type()
                self.state = 175
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def vardecl3_2(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl3_2Context,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl3

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl3" ):
                return visitor.visitVardecl3(self)
            else:
                return visitor.visitChildren(self)




    def vardecl3(self):

        localctx = MT22Parser.Vardecl3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vardecl3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(MT22Parser.ID)
            self.state = 180
            self.vardecl3_2()
            self.state = 181
            self.array_type()
            self.state = 182
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl3_2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def vardecl3_2(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl3_2Context,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl3_2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl3_2" ):
                return visitor.visitVardecl3_2(self)
            else:
                return visitor.visitChildren(self)




    def vardecl3_2(self):

        localctx = MT22Parser.Vardecl3_2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_vardecl3_2)
        try:
            self.state = 191
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.match(MT22Parser.COMMA)
                self.state = 185
                self.match(MT22Parser.ID)
                self.state = 186
                self.vardecl3_2()
                self.state = 187
                self.array_type()
                self.state = 188
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.match(MT22Parser.COLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def paradecl(self):
            return self.getTypedRuleContext(MT22Parser.ParadeclContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):
